# dusk

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Cargo.yaml  README.md  dust.dust  f  sample.dust  sample2.dust  tast  test.dust  tost.dust
app_error/: Cargo.toml
app_error/src/: lib.rs
ast/: Cargo.toml
ast/src/: lib.rs
ci/: bootstrap  bootstrap.sh  ci  ci-compile  ci-install-local  ci-install-system  ci-make  ci-make-dust3-init  ci-repl  ci-tar  ci-test  config  lib  lib.config  lib.docker  lib.ide  lib.init  lib.install  lib.package  lib.sys  recipe.base
collection/src/: lib.rs
compile/: Cargo.toml
compile/src/: compile.rs  compilers.rs  lib.rs  symbol_info.rs  symbol_table.rs
doc/: tutorial.md
either/src/: lib.rs
error/src/: error_debug.rs  lib.rs
grammar/: .clangd  CMakeLists.txt  ci.dust
grammar/mod/santa.sonar/: CMakeLists.txt
include/dust/: docker  lib.ide  package
include/dust/hashi/: package
include/dust/hashi/nomad/: lib
include/dust/hashi/terraform/: aws  backend  base  lib  state  terraform
include/dust/hashi/vault/: aws  base  lib  policy  ssh  unseal  user
include/dust/lib.core/: discreet  lib
include/dust/lib.docker/: lib
include/dust/lib.ide/: config.dake  dake  dusk  lib
include/dust/lib.std/: arg_get-jq  discreet  jq  lib
include/dust/lib.sudo/: lib
include/dust/lib.term/: lib
include/dust/lib.ux/: lib
include/dust/systemd/: package
include/dust/systemd/machinectl/: lib
lex/: Cargo.toml
lex/src/: lib.rs
lexpop/: Cargo.toml
lexpop/src/: lib.rs
m/ast/: Cargo.toml
m/ast/src/: display.rs  factory.rs  lib.rs
m/buf/: Cargo.toml
m/buf/src/: lib.rs  mem_take.rs  sd2.rs  string_buf.rs  string_buf_iter.rs
m/buf/src/sd2/: detail.rs
m/collection/: Cargo.toml
m/collection/src/: lib.rs
m/compile/: Cargo.toml
m/compile/src/: compile.rs  compile_util.rs  compiler_ext.rs  compilers.rs  emit.rs  facade.rs  file_path.rs  include.rs  lib.rs  link.rs  sd.rs  show.rs  static_type.rs  symbol_info.rs  symbol_table.rs
m/compile/src/symbol_table/: ext.rs  funny_name_lookup.rs  lookups.rs  scope.rs  scopes.rs
m/either/: Cargo.toml
m/either/src/: lib.rs
m/error/: Cargo.toml
m/error/src/: error_debug.rs  lib.rs
m/job/: Cargo.toml
m/job/src/: lib.rs
m/lex/: Cargo.toml
m/lex/src/: lib.rs
m/lex/tests/: test0.rs
m/lexpop/: Cargo.toml
m/lexpop/src/: lex.rs  lib.rs
m/lexpop/tests/: raw_string_matcher.rs  test0.rs
m/libxs/: Cargo.toml
m/libxs/src/: lib.rs
m/main/: Cargo.toml
m/main/src/: cli.rs  errors.rs  exec_common.rs  lib.rs  load_icode.rs  main.rs  sd.rs
m/parse/: Cargo.toml
m/parse/src/: dust.lalrpop  lib.rs
m/show/: Cargo.toml
m/vm/: Cargo.toml
m/vm-debug/: Cargo.toml
m/vm-debug/src/: lib.rs
m/vm/src/: debugger.rs  icode.rs  lib.rs  syscall.rs  to_sh.rs  value.rs  vm.rs
m/vm/src/syscall/: argslice.rs  builtin.rs  spawn.rs  util.rs
m/vm/src/value/: array_view.rs  signed.rs
main/: Cargo.toml
main/src/: error.rs  lib.rs  main.rs
main_drive/: Cargo.toml
main_drive/src/: main.rs
parse/: Cargo.toml
parse/src/: dust.lalrpop  lib.rs
parser_1/: Cargo.toml
parser_1/src/: ast.rs  dust.lalrpop  lib.rs
show/: Cargo.toml
show/src/: lib.rs
spec/: argument_subslicing  binding_capture_scope  collection_time  current_working_directory  cwd_from_variable  environment  input_redirection_to_method  lex_symbol_tokens_closing_seq_parsing  spec  xsim_xsi_megafront_walkthrough
usr/local/lib/dust/: lib.docker  lib.ide  lib.term  lib.ux  std  sys
var/docker/: Dockerfile
var/example/: test.dust
var/example/sample-app/nginx-fcgi-dust/: lib  lib.config  lib.system
var/example/sqlite3/: db.dust  image.dust  service.dust  stdlib.dust
var/sample/: test.dust
var/sample/old_ci/: ci-install-system  ci-make  ci-tar  ci-test
var/web-app/: ci  config.local  lib  package
var/web-app/ci/: lib
vm/: Cargo.toml
vm-core/: Cargo.toml
vm-exec/: Cargo.toml
vm/src/: icode.rs  lib.rs  value.rs  vm.rs
web-app/: ci.dust
