[workspace]
members = [
    './m/ast',
    './m/buf',
    './m/collection',
    './m/compile',
    './m/either',
    './m/error',
    './m/lex',
    './m/lexpop',
    './m/main',
    './m/parse',
    './m/show',
    './m/vm',
]
[patch.crates-io.ast]
path = './m/ast'

[patch.crates-io.buf]
path = './m/buf'

[patch.crates-io.collection]
path = './m/collection'

[patch.crates-io.compile]
path = './m/compile'

[patch.crates-io.either]
path = './m/either'

[patch.crates-io.error]
path = './m/error'

[patch.crates-io.lex]
path = './m/lex'

[patch.crates-io.lexpop]
path = './m/lexpop'

[patch.crates-io.main]
path = './m/main'

[patch.crates-io.parse]
path = './m/parse'

[patch.crates-io.show]
path = './m/show'

[patch.crates-io.vm]
path = './m/vm'
