[package]
name = 'main'
version = '0.0.1'
edition = '2018'
[dependencies.anyhow]
version = '*'

[dependencies.ast]
version = '0.0.1'
path = '../ast'

[dependencies.bincode]
version = '*'

[dependencies.collection]
version = '0.0.1'
path = '../collection'

[dependencies.compile]
version = '0.0.1'
path = '../compile'

[dependencies.error]
version = '0.0.1'
path = '../error'

[dependencies.git2]
version = '*'
optional = true

[dependencies.lalrpop-util]
version = '*'

[dependencies.lexpop]
version = '0.0.1'
path = '../lexpop'

[dependencies.log]
version = '*'

[dependencies.nom]
version = '*'

[dependencies.parse]
version = '0.0.1'
path = '../parse'

[dependencies.pretty_env_logger]
version = '*'

[dependencies.proc-macro2]
version = '*'

[dependencies.quote]
version = '*'

[dependencies.ron]
version = '*'
optional = true

[dependencies.serde]
version = '*'
features = ['derive']
optional = true

[dependencies.serde-transcode]
version = '*'

[dependencies.serde_cbor]
version = '*'

[dependencies.serde_json]
version = '*'

[dependencies.serde_yaml]
version = '*'

[dependencies.show]
version = '0.0.1'
path = '../show'

[dependencies.syn]
version = '*'
features = [
    'extra-traits',
    'full',
    'visit',
    'visit-mut',
]
optional = true

[dependencies.termcolor]
version = '*'

[dependencies.thiserror]
version = '*'

[dependencies.toml]
version = '*'

[dependencies.trybuild]
version = '*'
features = ['diff']

[dependencies.url]
version = '*'

[dependencies.vm]
version = '0.0.1'
path = '../vm'
