[package]
name = 'parse'
version = '0.0.1'
edition = '2018'
[dependencies.ast]
version = '0.0.1'
path = '../ast'

[dependencies.collection]
version = '0.0.1'
path = '../collection'

[dependencies.error]
version = '0.0.1'
path = '../error'

[dependencies.lalrpop-util]
version = '*'

[dependencies.lexpop]
version = '0.0.1'
path = '../lexpop'

[dependencies.log]
version = '*'
[build-dependencies]
lalrpop = "0.19.6"
