[package]
name = 'vm'
version = '0.0.1'
edition = '2018'
[dependencies.ast]
version = '0.0.1'
path = '../ast'

[dependencies.collection]
version = '0.0.1'
path = '../collection'

[dependencies.either]
version = '0.0.1'
path = '../either'

[dependencies.error]
version = '0.0.1'
path = '../error'

[dependencies.log]
version = '*'
