[package]
name = 'compile'
version = '0.0.1'
edition = '2021'
[dependencies.ast]
version = '0.0.1'
path = '../ast'

[dependencies.buf]
version = '0.0.1'
path = '../buf'

[dependencies.collection]
version = '0.0.1'
path = '../collection'

[dependencies.either]
version = '0.0.1'
path = '../either'

[dependencies.error]
version = '0.0.1'
path = '../error'

[dependencies.lexpop]
version = '0.0.1'
path = '../lexpop'

[dependencies.log]
version = '*'

[dependencies.parse]
version = '0.0.1'
path = '../parse'

[dependencies.show]
version = '0.0.1'
path = '../show'

[dependencies.vm]
version = '0.0.1'
path = '../vm'

[features]
debug = []
