[package]
name = 'lexpop'
version = '0.0.1'
edition = '2021'
[dependencies.collection]
version = '0.0.1'
path = '../collection'

[dependencies.either]
version = '0.0.1'
path = '../either'

[dependencies.error]
version = '0.0.1'
path = '../error'

[dependencies.log]
version = '*'

[dependencies.show]
version = '0.0.1'
path = '../show'
