[package]
name = 'main'
version = '0.0.1'
edition = '2018'
[dependencies.ast]
version = '0.0.1'
path = '../ast'

[dependencies.bio]
version = '*'
git = 'https://gitlab.com/gvz/rs'
branch = 'b2'

[dependencies.collection]
version = '0.0.1'
path = '../collection'

[dependencies.compile]
version = '0.0.1'
path = '../compile'

[dependencies.either]
version = '0.0.1'
path = '../either'

[dependencies.error]
version = '0.0.1'
path = '../error'

[dependencies.job]
version = '0.0.1'
path = '../job'

[dependencies.lex]
version = '0.0.1'
path = '../lex'

[dependencies.lexpop]
version = '0.0.1'
path = '../lexpop'

[dependencies.log]
version = '*'

[dependencies.parse]
version = '0.0.1'
path = '../parse'

[dependencies.pretty_env_logger]
version = '*'

[dependencies.show]
version = '0.0.1'
path = '../show'

[dependencies.vm]
version = '0.0.1'
path = '../vm'

[features]
default = ['inject_args']
inject_args = []
