[package]
name = 'parse'
version = '0.0.1'
edition = '2021'
[dependencies.ast]
version = '0.0.1'
path = '../ast'

[dependencies.collection]
version = '0.0.1'
path = '../collection'

[dependencies.error]
version = '0.0.1'
path = '../error'

[dependencies.lalrpop-util]
version = '*'

[dependencies.lex]
version = '0.0.1'
path = '../lex'

[dependencies.log]
version = '*'
[build-dependencies.lalrpop]
version = '*'
