[package]
name = 'vm'
version = '0.0.1'
edition = '2018'
[dependencies.ast]
version = '0.0.1'
path = '../ast'

[dependencies.buf]
version = '0.0.1'
path = '../buf'

[dependencies.collection]
version = '0.0.1'
path = '../collection'

[dependencies.either]
version = '0.0.1'
path = '../either'

[dependencies.error]
version = '0.0.1'
path = '../error'

[dependencies.job]
version = '0.0.1'
path = '../job'

[dependencies.log]
version = '*'

[dependencies.show]
version = '0.0.1'
path = '../show'
